# race-bib-detector

./: .gitignore  AGENTS.md  API_REVIEW.md  ARCHITECTURE.md  BENCHMARKING.md  BENCHMARK_DESIGN.md  CLAUDE.md  DETECTION.md  IDEAS.md  INSTALLATION.md  PREPROCESSING.md  REVIEW.md  STANDARDS.md  STRUCTURE.md  TESTING.md  TODO.md  benchmark.py  bnr.py  cache_cleanup.py  config.py  db.py  download_by_bib.py  geometry.py  list_detections.py  logging_utils.py  photo.py  pipeline.py  pipeline_types.py  pyproject.toml  requirements.txt  scan_album.py  schema.sql  schema_v2.sql  todo_albums  todo_benchmark.md  todo_clahe.md  todo_cli.md  todo_code_review_codex.md  todo_face_labeling.md  todo_facial_recognition.md  (+5 more)
benchmarking/: BENCHMARKING.md  README.md  __init__.py  app.py  baseline.json  bib_face_links.json  bib_ground_truth.json  cli.py  completeness.py  face_embeddings.py  face_ground_truth.json  face_identities.json  frozen_check.py  ghost.py  ground_truth.json  ground_truth.py  identities.py  identity_gallery_service.py  label_utils.py  labeling_app.py  link_analysis.py  migrate_photo_metadata.py  photo_index.json  photo_index.py  photo_metadata.json  photo_metadata.py  prepare.py  routes_benchmark.py  routes_bib.py  routes_face.py  routes_identities.py  runner.py  scanner.py  schemas.py  scoring.py  sets.py  suggestions.json  templates_env.py  todo_benchmark_inspect.md  todo_benchmark_runner.md  (+7 more)
cli/: album.py  benchmark.py  cache.py  faces.py  scan.py  serve.py
detection/: __init__.py  bbox.py  detector.py  filtering.py  regions.py  types.py  validation.py
(+285 files in other folders)
